--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,14 @@
     <script src="dist/js/underscore.js" type="text/javascript"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <style type="text/css">
+        body { padding-top: 70px; }
+        .badge {background-color: red}
+    </style>
 
 </head>
 <body>
-<nav class="navbar navbar-inverse" role="navigation">
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-links">
@@ -29,8 +33,8 @@
                 <li><a href="#" data-page="login">Войти</a></li>
                 <li><a href="#" data-page="profile">Профиль</a></li>
                 <li><a href="#" data-page="users">Пользователи</a></li>
-                <li><a href="#" data-page="debtors">Должники</a></li>
-                <li><a href="#" data-page="creditors">Кредиторы</a></li>
+                <li><a href="#" data-page="debtors">Должники <span class="badge" id="badge-debtors"></span></a></li>
+                <li><a href="#" data-page="creditors">Кредиторы <span class="badge" id="badge-creditors"></span></a></li>
             </ul>
         </div>
     </div>
@@ -61,7 +65,7 @@
         <table class="table table-striped">
             <% for (var i in data) { %>
             <tr>
-                <td class="user-item" data-id="<%= data[i].id%>"><%= data[i].name%> <span class="glyphicon glyphicon-chevron-right"></span></td>
+                <td><%= data[i].name%> <button class="user-item btn btn-default btn-xs pull-right" data-id="<%= data[i].id%>"><span class="glyphicon glyphicon-plus"></span> Дать в долг</button></td>
             </tr>
             <% } %>
         </table>
